Use `Java.loadClass` instead of `require`